; ModuleID = '/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_notify_module.c_ngx_rtmp_notify_postconfiguration.c'
source_filename = "/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_notify_module.c_ngx_rtmp_notify_postconfiguration.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ngx_rtmp_connect = common dso_local global i32 0, align 4
@next_connect = common dso_local global i32 0, align 4
@ngx_rtmp_notify_connect = common dso_local global i32 0, align 4
@ngx_rtmp_disconnect = common dso_local global i32 0, align 4
@next_disconnect = common dso_local global i32 0, align 4
@ngx_rtmp_notify_disconnect = common dso_local global i32 0, align 4
@ngx_rtmp_publish = common dso_local global i32 0, align 4
@next_publish = common dso_local global i32 0, align 4
@ngx_rtmp_notify_publish = common dso_local global i32 0, align 4
@ngx_rtmp_play = common dso_local global i32 0, align 4
@next_play = common dso_local global i32 0, align 4
@ngx_rtmp_notify_play = common dso_local global i32 0, align 4
@ngx_rtmp_close_stream = common dso_local global i32 0, align 4
@next_close_stream = common dso_local global i32 0, align 4
@ngx_rtmp_notify_close_stream = common dso_local global i32 0, align 4
@ngx_rtmp_record_done = common dso_local global i32 0, align 4
@next_record_done = common dso_local global i32 0, align 4
@ngx_rtmp_notify_record_done = common dso_local global i32 0, align 4
@NGX_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ngx_rtmp_notify_postconfiguration to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ngx_rtmp_notify_postconfiguration(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @ngx_rtmp_connect, align 4
  store i32 %3, i32* @next_connect, align 4
  %4 = load i32, i32* @ngx_rtmp_notify_connect, align 4
  store i32 %4, i32* @ngx_rtmp_connect, align 4
  %5 = load i32, i32* @ngx_rtmp_disconnect, align 4
  store i32 %5, i32* @next_disconnect, align 4
  %6 = load i32, i32* @ngx_rtmp_notify_disconnect, align 4
  store i32 %6, i32* @ngx_rtmp_disconnect, align 4
  %7 = load i32, i32* @ngx_rtmp_publish, align 4
  store i32 %7, i32* @next_publish, align 4
  %8 = load i32, i32* @ngx_rtmp_notify_publish, align 4
  store i32 %8, i32* @ngx_rtmp_publish, align 4
  %9 = load i32, i32* @ngx_rtmp_play, align 4
  store i32 %9, i32* @next_play, align 4
  %10 = load i32, i32* @ngx_rtmp_notify_play, align 4
  store i32 %10, i32* @ngx_rtmp_play, align 4
  %11 = load i32, i32* @ngx_rtmp_close_stream, align 4
  store i32 %11, i32* @next_close_stream, align 4
  %12 = load i32, i32* @ngx_rtmp_notify_close_stream, align 4
  store i32 %12, i32* @ngx_rtmp_close_stream, align 4
  %13 = load i32, i32* @ngx_rtmp_record_done, align 4
  store i32 %13, i32* @next_record_done, align 4
  %14 = load i32, i32* @ngx_rtmp_notify_record_done, align 4
  store i32 %14, i32* @ngx_rtmp_record_done, align 4
  %15 = load i32, i32* @NGX_OK, align 4
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
